--- a/package.xml
+++ b/package.xml
@@ -9,11 +9,7 @@
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="matlab01@todo.todo">matlab01</maintainer>
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -49,9 +45,15 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>rospy</build_depend>
+  <build_depend>kobuki_msgs</build_depend>
+
   <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>kobuki_msgs</build_export_depend>
+  
   <exec_depend>rospy</exec_depend>
+  <exec_depend>kobuki_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
