--- a/package.xml
+++ b/package.xml
@@ -48,12 +48,15 @@
 
   <build_depend>rospy</build_depend>
   <build_depend>kobuki_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>kobuki_msgs</build_export_depend>
-  
+  <build_export_depend>actionlib_msgs</build_export_depend>
+
   <exec_depend>rospy</exec_depend>
   <exec_depend>kobuki_msgs</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
